--- a/anybuy/admin/templates/AdminIndex.html
+++ b/anybuy/admin/templates/AdminIndex.html
@@ -225,8 +225,8 @@ float:left;
 			<div class="div3">
 				<li><a class="a" href="javascript:void(0);"
 					onClick="openurl('/allshopowner/');">All Shop Owner</a></li>
-				<li><a class="a" href="javascript:void(0);"
-					onClick="openurl('/approve/');">Approve</a></li>
+				<!-- <li><a class="a" href="javascript:void(0);"
+					onClick="openurl('/approve/');">Approve</a></li> -->
 				<li><a class="a" href="javascript:void(0);"
 					onClick="openurl('/sblacklist/');">Blacklist</a></li>
 			   	
@@ -254,6 +254,16 @@ float:left;
 						onClick="openurl('classQuery.html');">top5 Stores</a></li>
 					<li><a class="a" href="javascript:void(0);"
 						onClick="openurl('classQuery.html');">Top 10 Products</a></li>
+				</ul>
+			</div>
+			<div class="div2">
+				<div class="spgl"></div>
+				<span>&nbsp;&nbsp;&nbsp;Manage Order</span>
+			</div>
+			<div class="div3">
+				<ul>
+					<li><a class="a" href="javascript:void(0);"
+						onClick="openurl('/allorder/');">Serach Order</a></li>
 				</ul>
 			</div>
 			<div class="div2">
@@ -295,7 +305,7 @@ float:left;
 						onClick="openurl('afficheAdd.html');">添加公告</a></li>
 				</ul>
 			</div>
-			<a class="a1" href="login.html"><div class="div2">
+			<a class="a1" href="/adminlogout/"><div class="div2">
 					<div class="tcht"></div>
 					<span>Quit</span>
 				</div></a>
