--- a/anybuy/admin/templates/AdminIndex.html
+++ b/anybuy/admin/templates/AdminIndex.html
@@ -210,10 +210,10 @@ float:left;
 		<div class="title" >
 			<h2>ParkShop Management System</h2>
 		</div>
-		<div class="fr top-link">
-			<a href="admin_list.html" target="mainCont" title="DeathGhost"><i
-				class="adminIcon"></i><span>Administrator：yangchen</span></a> 
+		<div class="fr top-link" style="margin-right: 20px;">
+		<i class="adminIcon"></i><span>Administrator：{{ UserName }}</span> 
 		</div>
+
 	</div>
 
 	<div class="left">
@@ -258,39 +258,42 @@ float:left;
 			</div>
 			<div class="div2">
 				<div class="spgl"></div>
-				<span>&nbsp;&nbsp;&nbsp;Manage Order</span>
+				<span>&nbsp;&nbsp;&nbsp;<a class="a" href="javascript:void(0);"
+						onClick="openurl('/allorder/');">Serach Order</a></span>
 			</div>
 			<div class="div3">
-				<ul>
+				<!-- <ul>
 					<li><a class="a" href="javascript:void(0);"
 						onClick="openurl('/allorder/');">Serach Order</a></li>
-				</ul>
+				</ul> -->
 			</div>
 			<div class="div2">
 				<div class="spgl"></div>
-				<span>Backup Database</span>
+				<span><a class="a" href="javascript:void(0);"
+						onClick="openurl('/backupdatabase/');">Backup Database</a></span>
 			</div>
 			<div class="div3">
-				<ul>
+				<!-- <ul>
 					<li><a class="a" href="javascript:void(0);"
 						onClick="openurl('studentQuery.html');">学生管理</a></li>
 					<li><a class="a" href="javascript:void(0);"
 						onClick="openurl('teacherQuery.html');">老师管理</a></li>
-				</ul>
+				</ul> -->
 			</div>
 			
 			<div class="div2">
 				<div class="spgl"></div>
-				<span>Sales History</span> 
+				<span><a class="a" href="javascript:void(0);"
+						onClick="openurl('/salehistory/');">Sales History</a></span> 
 			</div>
 			<div class="div3">
 
-				<ul>
+				<!-- <ul>
 					<li><a class="a" href="javascript:void(0);"
 						onClick="openurl('deletecomment.html');">评价删除</a></li>
 					<li><a class="a" href="javascript:void(0);"
 						onClick="openurl('useredit.html');">用户禁言</a></li>
-				</ul>
+				</ul> -->
 
 			</div>
 			<div class="div2">
