--- a/anybuy/admin/templates/AdminIndex.html
+++ b/anybuy/admin/templates/AdminIndex.html
@@ -251,9 +251,9 @@ float:left;
 			<div class="div3">
 				<ul>
 					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('classQuery.html');">top5 Stores</a></li>
+						onClick="openurl('/top5/');">top5 Stores</a></li>
 					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('classQuery.html');">Top 10 Products</a></li>
+						onClick="openurl('/top10/');">Top 10 Products</a></li>
 				</ul>
 			</div>
 			<div class="div2">
@@ -296,9 +296,10 @@ float:left;
 				</ul> -->
 
 			</div>
-			<div class="div2">
+			<!-- <div class="div2">
 				<div class="spgl"></div>
-				<span>Commission</span>
+				<span><a class="a" href="javascript:void(0);"
+						onClick="openurl('/commission/');">Commission</a></span>
 			</div>
 			<div class="div3">
 				<ul>
@@ -307,7 +308,7 @@ float:left;
 					<li><a class="a" href="javascript:void(0);"
 						onClick="openurl('afficheAdd.html');">添加公告</a></li>
 				</ul>
-			</div>
+			</div> -->
 			<a class="a1" href="/adminlogout/"><div class="div2">
 					<div class="tcht"></div>
 					<span>Quit</span>
