--- a/anybuy/account/templates/checkOrder.html
+++ b/anybuy/account/templates/checkOrder.html
@@ -53,13 +53,13 @@
 						}
 						</script>
 						{% for ol in orderList %}
-						<tr class="yanse" id="item{{ ol.CommodityID.id }}">
+						<tr class="yanse" id="item{{ ol.id }}">
 						<td>{{ ol.id }}</td>
-						<td><a href="/commodity/id/{{ ol.CommodityID.id }}" style = "color:#3299CC"><img src="/file/{{ ol.CommodityID.CommodityImage }}" style = "height:90px;"/></a></td>
-						<td><a href="/commodity/id/{{ ol.CommodityID.id }}" style = "color:#3299CC">{{ ol.CommodityID.CommodityName }}</a></td>
-						<td>{{ ol.CommodityID.SellPrice }}HK$</td>
+						<td><a href="/commodity/id/{{ ol.id }}" style = "color:#3299CC"><img src="/file/{{ ol.CommodityImage }}" style = "height:90px;"/></a></td>
+						<td><a href="/commodity/id/{{ ol.id }}" style = "color:#3299CC">{{ ol.CommodityName }}</a></td>
+						<td>{{ ol.SellPrice }}HK$</td>
 						<td>{{ ol.OrderAmount }}</td>
-						<td>{% widthratio ol.CommodityID.SellPrice 1 ol.OrderAmount %}HK$</td>
+						<td>{% widthratio ol.SellPrice 1 ol.OrderAmount %}HK$</td>
 						<td>{{ ol.OrderListDate }}</td>
 						<td>Name:{{ ol.CustomerOrderID.CustomerID.CustomerName}}<br>
 							Tel:{{ ol.CommodityAddressID.CommodityTelephone}}<br>
@@ -94,7 +94,7 @@
 						<td>commented</td>
 						{% endif %}
 
-						<td class="text-center"><input type="text" id='myText{{ ol.CommodityID.id }}' size="10" placeholder="Input ShipNo" maxlength="10" /><br><br><a class='btn btn-info btn-xs' onclick="confirmOrder('{{ol.id}}','{{ ol.CommodityID.id }}')"><span class="glyphicon"><b>Confirm</b></span></a></td>
+						<td class="text-center"><input type="text" id='myText{{ ol.id }}' size="10" placeholder="Input ShipNo" maxlength="10" /><br><br><a class='btn btn-info btn-xs' onclick="confirmOrder('{{ol.id}}','{{ ol.id }}')"><span class="glyphicon"><b>Confirm</b></span></a></td>
 						{% endfor %}
 						</table>
 						
