--- a/anybuy/admin/templates/AdminLogin.html
+++ b/anybuy/admin/templates/AdminLogin.html
@@ -4,21 +4,23 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>管理员登录</title>
+<title>Any-Buy|admin|login</title>
 
 <link rel="stylesheet" type="text/css" href="/file/Css/styles.css">
+
+<link rel="shortcut icon" href="/file/images/favicon.png">
 
 </head>
 <body>
 <div class="wrapper">
 
 	<div class="container">
-		<h1>管理员登录</h1>
+		<h1>Admin Login</h1>
 		<form class="form" method="post" action="/adminlogin/">
 		 {% csrf_token %} 
 			<input type="text" name="adminName" placeholder="Username">
 			<input type="password" name="adminPassword" placeholder="Password"><br>
-			<button type="submit" id="login-button"><strong>登陆</strong></button>
+			<button type="submit" id="login-button"><strong>Login</strong></button>
 		</form>
 
 	</div>
