--- a/anybuy/admin/templates/SaleHistory.html
+++ b/anybuy/admin/templates/SaleHistory.html
@@ -36,14 +36,14 @@
 </head>
 <body >
 
-    <!-- <form class="form-inline definewidth m20" action="/serachorder" method="get">
-        {% csrf_token %} <font color="#777777"><strong>OrderId：</strong></font> 
-        <input type="text" name="orderId" class="abc input-default" placeholder="order id">
+    <form class="form-inline definewidth m20" action="/salehistory" method="get">
+        {% csrf_token %} <font color="#777777"><strong>commission：</strong></font> 
+        <input type="text" maxlength="2" name="commission" class="abc input-default" placeholder="Commission">
         &nbsp;&nbsp;
-        <button type="submit" class="btn btn-primary">Query</button>
-    </form> -->
+        <button type="submit" class="btn btn-primary">submit</button>
+    </form>
     <div>
-        <h3 style="text-align: center;color: #3a87ad">All Order</h3>
+        <h3 style="text-align: center;color: #3a87ad">Sale History</h3>
     </div>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="/admin/salehistory/all">
@@ -76,52 +76,52 @@
                 <th>Remaining Time</th>
             </tr>
         </thead>
-        {% for salesHistory in SalesHistoryList %}
-        <tr class="yanse" id="item{{salesHistory.CommodityID.id}}">
-            <td>{{ salesHistory.id }}</td>
-            <td>{{ salesHistory.CommodityID.CommodityName }}</td>
-            <td>{{ salesHistory.OrderListDate }}</td>
-            <td>{{ salesHistory.CommodityID.SellPrice }}HK$</td>
-            <td>{{ salesHistory.OrderAmount }}</td>
+        {% for saleshistory in salehistorylist %}
+        <tr class="yanse" id="item{{saleshistory.CommodityID.id}}">
+            <td>{{ saleshistory.id }}</td>
+            <td>{{ saleshistory.CommodityID.CommodityName }}</td>
+            <td>{{ saleshistory.OrderListDate }}</td>
+            <td>{{ saleshistory.CommodityID.SellPrice }}HK$</td>
+            <td>{{ saleshistory.OrderAmount }}</td>
             <td>
-                {% widthratio salesHistory.CommodityID.SellPrice 1 salesHistory.OrderAmount %}HK$
+                {% widthratio saleshistory.CommodityID.SellPrice 1 saleshistory.OrderAmount %}HK$
             </td>
             <td>
-                Name:{{ salesHistory.CustomerOrderID.CustomerID.CustomerName}}
+                Name:{{ saleshistory.CustomerOrderID.CustomerID.CustomerName}}
                 <br>
-                Tel:{{ salesHistory.CustomerOrderID.CustomerID.CustomerTelephone}}
+                Tel:{{ saleshistory.CustomerOrderID.CustomerID.CustomerTelephone}}
                 <br>
-                Email:{{ salesHistory.CustomerOrderID.CustomerID.CustomerEmail}}
+                Email:{{ saleshistory.CustomerOrderID.CustomerID.CustomerEmail}}
                 <br>
-                Addr:{{ salesHistory.CustomerOrderID.CustomerID.CustomerAddress }}
+                Addr:{{ saleshistory.CustomerOrderID.CustomerID.CustomerAddress }}
             </td>
-            {% if salesHistory.OrderListState == 0 %}
+            {% if saleshistory.OrderListState == 0 %}
             <td>paying</td>
             {% endif %}
-                    {% if salesHistory.OrderListState == 1 %}
+                    {% if saleshistory.OrderListState == 1 %}
             <td>
                 shipping
-                <br>ShipNo:{{ salesHistory.ShipNo }}</td>
+                <br>ShipNo:{{ saleshistory.ShipNo }}</td>
             {% endif %}
-                    {% if salesHistory.OrderListState == 2 %}
+                    {% if saleshistory.OrderListState == 2 %}
             <td>signing</td>
             {% endif %}
-                    {% if salesHistory.OrderListState == 3 %}
+                    {% if saleshistory.OrderListState == 3 %}
             <td>commenting</td>
             {% endif %}
-                    {% if salesHistory.OrderListState == 4 %}
+                    {% if saleshistory.OrderListState == 4 %}
             <td>refunding</td>
             {% endif %}
-                    {% if salesHistory.OrderListState == 5 %}
+                    {% if saleshistory.OrderListState == 5 %}
             <td>refunded</td>
             {% endif %}
-                    {% if salesHistory.OrderListState == 6 %}
+                    {% if saleshistory.OrderListState == 6 %}
             <td>refused refunded</td>
             {% endif %}
-                    {% if salesHistory.OrderListState == 7 %}
+                    {% if saleshistory.OrderListState == 7 %}
             <td>finish</td>
             {% endif %}
-                    {% if salesHistory.OrderListState == 8 %}
+                    {% if saleshistory.OrderListState == 8 %}
             <td>commented</td>
             {% endif %}
             <td>0</td>
@@ -130,5 +130,9 @@
     </table>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <b>Total Value: {{totalvalue}}HK$</b>
+    <br>
+    <b>Admin Income: {{ctotalvalue}}HK$</b>
+    <br>
+    <b>Admin commission: {{scommission}}%</b>
 </body>
 </html>
