--- a/anybuy/admin/templates/sBlackList.html
+++ b/anybuy/admin/templates/sBlackList.html
@@ -60,7 +60,7 @@
         <tr>
         <form action="">
                 <td>1</td>
-                <td><a href="studentdetail.html">hcm</a></td>
+                <td>hcm</td>
                 <td>hem de dian</td>
                 <td>haoduohaodongxi</td>
                 <td> <button class="btn btn-default" type="submit">Del</button></td>
